--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,9 @@ Django==4.2.4
 gunicorn==21.2.0
 packaging==23.1
 Pillow==10.0.0
-psycopg2==2.9.7
+psycopg2-binary==2.9.7
 python-decouple==3.8
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
 whitenoise==5.3.0
-
